--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,15 @@
-h3{
-    color: deeppink;
-    font-size: 50px;
-    font-family: Herculanum;
-}
-
-h5{
+laks{
     color: #6fd4e8;
-    font-size: 64px;
+    font-size: 50px;
     font-family: "Microsoft Tai Le";
 }
 
-#red{
-    color: green;
-    font-size: 40px;
-    font-family: "Segoe UI Light";
+la{
+    color: black;
+    font-size: 50px;
+    font-family: "Microsoft Tai Le";
 }
 
-h1{
-    color: #0a3622;
-    font-size: large;
-    font-family: "Segoe UI";
-}
+
+
 
