--- a/css/styles.css
+++ b/css/styles.css
@@ -12,4 +12,17 @@ la{
 
 
 
+/*--------------------------------------features section-------------------------------------------------*/
+
+body main section:nth-child(2)>h2{
+    text-align: center;
+    color: #162A5F;
+    font-family: Libre Baskerville, serif;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-top: 0;
+
+}
 
