--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,33 @@ la{
 }
 
 /*---------------------------------------header section---------------------------------------------------*/
+header{
+    height: 10vh;
+    width: 72.73vw;
+    padding-left: 13vw;
+    padding-right: 13vw;
+    background-color: #8be5f75c;
+    position: relative;
+    position: sticky;
+    top: 0;
+    z-index: 3;
+}
+
+header>img{
+    position: absolute;
+    top: 0.5vh;
+    bottom: 0;
+    margin: auto;
+}
+
+header>nav{
+    position: absolute;
+    right: 13vw;
+    top: 0.9vh;
+    bottom: 0;
+    margin: auto;
+}
+
 header>nav>ul>li{
     display: inline;
     font-family: Inter, SansSerif;
