--- a/css/styles.css
+++ b/css/styles.css
@@ -224,16 +224,15 @@ body main section:first-child>div:nth-child(7)>img{
 }
 
 /*--------------------------------------features section-------------------------------------------------*/
+section:nth-child(2){
+    position: relative;
+    height: 100vh;
+    width: 72vw;
+    padding-left: 14vw;
+    padding-right: 14vw;
+}
 
-body main section:nth-child(2)>h2{
-    text-align: center;
-    color: #162A5F;
-    font-family: Libre Baskerville, serif;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    margin-top: 0;
+body main section:nth-child(2)>div:first-child{
 
 }
 
