--- a/css/styles.css
+++ b/css/styles.css
@@ -227,21 +227,22 @@ body main section:first-child>div:nth-child(7)>img{
 section:nth-child(2){
     position: relative;
     height: 100vh;
-    width: 72vw;
+    width: 60vw;
     padding-left: 14vw;
     padding-right: 14vw;
 }
 
 body main section:nth-child(2)>div:first-child{
-    height: 40vh;
-    width: 20vw;
+    height: 35vh;
+    width: 12vw;
 
     position: absolute;
-    top: 15vh;
+    /*top: 15vh;*/
     margin: auto;
 }
 
 body main section:nth-child(2)>div:first-child>h1{
+    width: 15vw;
     font-family: 'Catamaran';
     font-size: 1vw;
     font-weight: 600;
@@ -249,21 +250,21 @@ body main section:nth-child(2)>div:first-child>h1{
 
     position: absolute;
     top: 15vh;
-    left: 12.5vh;
+    left: 5vh;
     margin: auto;
 }
 
 body main section:nth-child(2)>div:first-child>h2{
-    width: 12vw;
+    width: 8vw;
     font-family: Inter, SansSerif;
-    font-size: 0.8vw;
+    font-size: 0.9vw;
     font-weight: 300;
     color: #0A0A0A;
     text-align: center;
 
     position: absolute;
-    top: 18vh;
-    left: 8vh;
+    top: 20vh;
+    left: 4vh;
     margin: auto;
 }
 
@@ -417,30 +418,29 @@ body main section:nth-child(2)>div:nth-child(4)>img{
 
 
 body main section:nth-child(2)>h5{
-    width: 7vw;
-    font-family: Inter, SansSerif;
-    font-size: 1vw;
+    width: 12vw;
+    font-family: Inter,"Arial Black";
+    font-size: 3vw;
     font-weight: 600;
-    color: #05BFDB;
+    color: #D9D9D9;
 
     position: absolute;
-    top: 10vh;
-    left: 0;
+    top: 18vh;
+    left: 60vw;
     right: 0;
     margin: auto;
 }
 
 body main section:nth-child(2)>h1{
-    width: 14vw;
+    width: 22vw;
     font-family: 'Catamaran';
     font-size: 3vw;
     font-weight: 700;
     color: #0A0A0A;
 
     position: absolute;
-    top: 13vh;
-    right: 0;
-    left: 0;
+    top: 22vh;
+    left: 68vw;
     margin: auto;
 }
 
@@ -452,15 +452,15 @@ body main section:nth-child(2)>h2{
     color: #808080;
 
     position: absolute;
-    top: 22vh;
+    top: 38vh;
+    left: 68vw;
     margin: auto;
-
 }
 
 
 body main section:nth-child(2)>div{
-    width: 23.5vw;
-    height: 35vh;
+    /*width: 27vw;*/
+    /*height: 25vh;*/
     background-color: white;
     box-shadow: #D0D0D0 0px 4px 12px;
     border-radius: 1vh;
@@ -474,16 +474,16 @@ section:nth-child(2)>div:hover{
 }
 
 #box1{
-    top: 25vh;
+    top: -30vh;
     left: 14vw;
 }
 
 #box1>img{
-    width: 20%;
+    width: 30%;
     position: absolute;
-    right: 0;
+    right: 8px;
     left: 0;
-    top: 4vh;
+    top: 3vh;
     margin: auto;
 }
 
