--- a/css/styles.css
+++ b/css/styles.css
@@ -280,15 +280,17 @@ body main section:nth-child(2)>div:first-child>img{
 
 
 body main section:nth-child(2)>div:nth-child(2){
-    height: 40vh;
-    width: 20vw;
+    height: 35vh;
+    width: 12vw;
 
     position: absolute;
-    top: 45vh;
+    top: 18vh;
+    left: 18vw;
     margin: auto;
 }
 
 body main section:nth-child(2)>div:nth-child(2)>h1{
+    width: 15vh;
     font-family: 'Catamaran';
     font-size: 1vw;
     font-weight: 600;
@@ -296,45 +298,46 @@ body main section:nth-child(2)>div:nth-child(2)>h1{
 
     position: absolute;
     top: 15vh;
-    left: 12.5vh;
+    left: 5vh;
     margin: auto;
 }
 
 body main section:nth-child(2)>div:nth-child(2)>h2{
-    width: 12vw;
+    width: 8vw;
     font-family: Inter, SansSerif;
-    font-size: 0.8vw;
+    font-size: 0.9vw;
     font-weight: 300;
     color: #0A0A0A;
     text-align: center;
 
     position: absolute;
-    top: 18vh;
-    left: 8vh;
+    top: 20vh;
+    left: 4vh;
     margin: auto;
 }
 
 body main section:nth-child(2)>div:nth-child(2)>img{
-    width: 20%;
+    width: 30%;
 
     position: absolute;
-    top: 5vh;
+    top: 25px;
     left: 0;
     right: 0;
     margin: auto;
 }
 
 body main section:nth-child(2)>div:nth-child(3){
-    height: 40vh;
-    width: 20vw;
+    height: 35vh;
+    width: 12vw;
 
     position: absolute;
-    top: 30vh;
+    top: -23vh;
     left: 35vw;
     margin: auto;
 }
 
 body main section:nth-child(2)>div:nth-child(3)>h1{
+    width: 20vw;
     font-family: 'Catamaran';
     font-size: 1vw;
     font-weight: 600;
@@ -342,45 +345,46 @@ body main section:nth-child(2)>div:nth-child(3)>h1{
 
     position: absolute;
     top: 15vh;
-    left: 9vh;
+    left: 1vh;
     margin: auto;
 }
 
 body main section:nth-child(2)>div:nth-child(3)>h2{
-    width: 12vw;
+    width: 8vw;
     font-family: Inter, SansSerif;
-    font-size: 0.8vw;
+    font-size: 0.9vw;
     font-weight: 300;
     color: #0A0A0A;
     text-align: center;
 
     position: absolute;
-    top: 18vh;
-    left: 8vh;
+    top: 20vh;
+    left: 4vh;
     margin: auto;
 }
 
 body main section:nth-child(2)>div:nth-child(3)>img{
-    width: 20%;
+    width: 30%;
 
     position: absolute;
-    top: 5vh;
+    top: 25px;
     left: 0;
     right: 0;
     margin: auto;
 }
 
 body main section:nth-child(2)>div:nth-child(4){
-    height: 40vh;
-    width: 20vw;
+    height: 35vh;
+    width: 12vw;
 
     position: absolute;
-    top: 60vh;
-    left: 35vw;
+    top: 25vh;
+    left: 39vw;
     margin: auto;
 }
 
 body main section:nth-child(2)>div:nth-child(4)>h1{
+    width: 15vh;
     font-family: 'Catamaran';
     font-size: 1vw;
     font-weight: 600;
@@ -388,29 +392,29 @@ body main section:nth-child(2)>div:nth-child(4)>h1{
 
     position: absolute;
     top: 15vh;
-    left: 12.5vh;
+    left: 5vh;
     margin: auto;
 }
 
 body main section:nth-child(2)>div:nth-child(4)>h2{
-    width: 12vw;
+    width: 8vw;
     font-family: Inter, SansSerif;
-    font-size: 0.8vw;
+    font-size: 0.9vw;
     font-weight: 300;
     color: #0A0A0A;
     text-align: center;
 
     position: absolute;
-    top: 18vh;
-    left: 8vh;
+    top: 20vh;
+    left: 4vh;
     margin: auto;
 }
 
 body main section:nth-child(2)>div:nth-child(4)>img{
-    width: 20%;
+    width: 30%;
 
     position: absolute;
-    top: 5vh;
+    top: 25px;
     left: 0;
     right: 0;
     margin: auto;
@@ -425,7 +429,7 @@ body main section:nth-child(2)>h5{
     color: #D9D9D9;
 
     position: absolute;
-    top: 18vh;
+    top: 0vh;
     left: 60vw;
     right: 0;
     margin: auto;
@@ -439,7 +443,7 @@ body main section:nth-child(2)>h1{
     color: #0A0A0A;
 
     position: absolute;
-    top: 22vh;
+    top: 5vh;
     left: 68vw;
     margin: auto;
 }
@@ -452,7 +456,7 @@ body main section:nth-child(2)>h2{
     color: #808080;
 
     position: absolute;
-    top: 38vh;
+    top: 20vh;
     left: 68vw;
     margin: auto;
 }
