--- a/css/styles.css
+++ b/css/styles.css
@@ -232,7 +232,22 @@ section:nth-child(2){
     padding-right: 14vw;
 }
 
-body main section:nth-child(2)>div:first-child{
+body main section:nth-child(2)>div:nth-child(1){
+    /*width: 27vw;*/
+    /*height: 25vh;*/
+    background-color: white;
+    box-shadow: #D0D0D0 0px 4px 12px;
+    border-radius: 1vh;
+
+    position: absolute;
+    margin: auto;
+}
+
+section:nth-child(2)>div:nth-child(1):hover{
+    box-shadow: #959393 0px 4px 12px;
+}
+
+body main section:nth-child(2)>div:nth-child(1)>div:nth-child(1){
     height: 35vh;
     width: 12vw;
 
@@ -241,8 +256,7 @@ body main section:nth-child(2)>div:first-child{
     margin: auto;
     background:linear-gradient(to top, #d6f0f5, rgba(0, 153, 201, 0.3));
 }
-
-body main section:nth-child(2)>div:first-child>h1{
+body main section:nth-child(2)>div:nth-child(1)>div:nth-child(1)>h1{
     width: 15vw;
     font-family: 'Catamaran';
     font-size: 1vw;
@@ -255,7 +269,7 @@ body main section:nth-child(2)>div:first-child>h1{
     margin: auto;
 }
 
-body main section:nth-child(2)>div:first-child>h2{
+body main section:nth-child(2)>div:nth-child(1)>div:nth-child(1)>h2{
     width: 8vw;
     font-family: Inter, SansSerif;
     font-size: 0.9vw;
@@ -269,7 +283,7 @@ body main section:nth-child(2)>div:first-child>h2{
     margin: auto;
 }
 
-body main section:nth-child(2)>div:first-child>img{
+body main section:nth-child(2)>div:nth-child(1)>div:nth-child(1)>img{
     width: 20%;
 
     position: absolute;
@@ -279,8 +293,7 @@ body main section:nth-child(2)>div:first-child>img{
     margin: auto;
 }
 
-
-body main section:nth-child(2)>div:nth-child(2){
+body main section:nth-child(2)>div:nth-child(1)>div:nth-child(2){
     height: 35vh;
     width: 12vw;
 
@@ -291,209 +304,8 @@ body main section:nth-child(2)>div:nth-child(2){
     background:linear-gradient(to top, #d6f0f5, rgba(0, 153, 201, 0.3));
 }
 
-body main section:nth-child(2)>div:nth-child(2)>h1{
-    width: 15vh;
-    font-family: 'Catamaran';
-    font-size: 1vw;
-    font-weight: 600;
-    color: #0A0A0A;
-
-    position: absolute;
-    top: 15vh;
-    left: 5vh;
-    margin: auto;
-}
-
-body main section:nth-child(2)>div:nth-child(2)>h2{
-    width: 8vw;
-    font-family: Inter, SansSerif;
-    font-size: 0.9vw;
-    font-weight: 300;
-    color: #0A0A0A;
-    text-align: center;
-
-    position: absolute;
-    top: 20vh;
-    left: 4vh;
-    margin: auto;
-}
-
-body main section:nth-child(2)>div:nth-child(2)>img{
-    width: 30%;
-
-    position: absolute;
-    top: 25px;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-
-body main section:nth-child(2)>div:nth-child(3){
-    height: 35vh;
-    width: 12vw;
-
-    position: absolute;
-    top: -23vh;
-    left: 35vw;
-    margin: auto;
-    background:linear-gradient(to top, #d6f0f5, rgba(0, 153, 201, 0.3));
-}
-
-body main section:nth-child(2)>div:nth-child(3)>h1{
-    width: 20vw;
-    font-family: 'Catamaran';
-    font-size: 1vw;
-    font-weight: 600;
-    color: #0A0A0A;
-
-    position: absolute;
-    top: 15vh;
-    left: 1vh;
-    margin: auto;
-}
-
-body main section:nth-child(2)>div:nth-child(3)>h2{
-    width: 8vw;
-    font-family: Inter, SansSerif;
-    font-size: 0.9vw;
-    font-weight: 300;
-    color: #0A0A0A;
-    text-align: center;
-
-    position: absolute;
-    top: 20vh;
-    left: 4vh;
-    margin: auto;
-}
-
-body main section:nth-child(2)>div:nth-child(3)>img{
-    width: 30%;
-
-    position: absolute;
-    top: 25px;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-
-body main section:nth-child(2)>div:nth-child(4){
-    height: 35vh;
-    width: 12vw;
-
-    position: absolute;
-    top: 25vh;
-    left: 39vw;
-    margin: auto;
-    background:linear-gradient(to top, #d6f0f5, rgba(0, 153, 201, 0.3));
-}
-
-body main section:nth-child(2)>div:nth-child(4)>h1{
-    width: 20vh;
-    font-family: 'Catamaran';
-    font-size: 1vw;
-    font-weight: 600;
-    color: #0A0A0A;
-
-    position: absolute;
-    top: 15vh;
-    left: 5vh;
-    margin: auto;
-}
-
-body main section:nth-child(2)>div:nth-child(4)>h2{
-    width: 8vw;
-    font-family: Inter, SansSerif;
-    font-size: 0.9vw;
-    font-weight: 300;
-    color: #0A0A0A;
-    text-align: center;
-
-    position: absolute;
-    top: 20vh;
-    left: 4vh;
-    margin: auto;
-}
-
-body main section:nth-child(2)>div:nth-child(4)>img{
-    width: 30%;
-
-    position: absolute;
-    top: 25px;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
 
 
-body main section:nth-child(2)>h5{
-    width: 12vw;
-    font-family: Inter,"Arial Black";
-    font-size: 3vw;
-    font-weight: 600;
-    color: #D9D9D9;
-
-    position: absolute;
-    top: 0vh;
-    left: 60vw;
-    right: 0;
-    margin: auto;
-}
-
-body main section:nth-child(2)>h1{
-    width: 22vw;
-    font-family: 'Catamaran';
-    font-size: 3vw;
-    font-weight: 700;
-    color: #0A0A0A;
-
-    position: absolute;
-    top: 5vh;
-    left: 68vw;
-    margin: auto;
-}
-
-body main section:nth-child(2)>h2{
-    width: 20vw;
-    font-family: Inter, SansSerif;
-    font-size: 1vw;
-    font-weight: 600;
-    color: #808080;
-
-    position: absolute;
-    top: 20vh;
-    left: 68vw;
-    margin: auto;
-}
-
-
-body main section:nth-child(2)>div{
-    /*width: 27vw;*/
-    /*height: 25vh;*/
-    background-color: white;
-    box-shadow: #D0D0D0 0px 4px 12px;
-    border-radius: 1vh;
-
-    position: absolute;
-    margin: auto;
-}
-
-section:nth-child(2)>div:hover{
-    box-shadow: #959393 0px 4px 12px;
-}
-
-#box1{
-    top: -30vh;
-    left: 14vw;
-}
-
-#box1>img{
-    width: 30%;
-    position: absolute;
-    right: 8px;
-    left: 0;
-    top: 3vh;
-    margin: auto;
-}
 
 
 
