--- a/css/styles.css
+++ b/css/styles.css
@@ -224,6 +224,7 @@ body main section:first-child>div:nth-child(7)>img{
 }
 
 /*--------------------------------------features section-------------------------------------------------*/
+
 section:nth-child(2){
     position: relative;
     height: 100vh;
@@ -232,218 +233,175 @@ section:nth-child(2){
     padding-right: 14vw;
 }
 
-body main section:nth-child(2)>div:nth-child(1){
-    /*width: 27vw;*/
-    /*height: 25vh;*/
+
+section:nth-child(2)>div:nth-child(1)>div:nth-child(1){
+    width: 27vh;
+    height: 36vh;
     background-color: white;
     box-shadow: #D0D0D0 0px 4px 12px;
     border-radius: 1vh;
-
     position: absolute;
     margin: auto;
 }
 
-section:nth-child(2)>div:nth-child(1):hover{
+section:nth-child(2)>div:nth-child(1)>div:nth-child(1):hover{
     box-shadow: #959393 0px 4px 12px;
 }
 
-body main section:nth-child(2)>div:nth-child(1)>div:nth-child(1){
+section:nth-child(2)>div:nth-child(1)>div:nth-child(1){
     height: 35vh;
-    width: 12vw;
-
+    width: 25vh;
     position: absolute;
-    /*top: 15vh;*/
-    margin: auto;
-    background:linear-gradient(to top, #d6f0f5, rgba(0, 153, 201, 0.3));
-}
-body main section:nth-child(2)>div:nth-child(1)>div:nth-child(1)>h1{
-    width: 15vw;
-    font-family: 'Catamaran';
-    font-size: 1vw;
-    font-weight: 600;
-    color: #0A0A0A;
-
-    position: absolute;
-    top: 15vh;
-    left: 5vh;
+    top: -26vh;
     margin: auto;
 }
 
-body main section:nth-child(2)>div:nth-child(1)>div:nth-child(1)>h2{
-    width: 8vw;
-    font-family: Inter, SansSerif;
-    font-size: 0.9vw;
-    font-weight: 300;
-    color: #0A0A0A;
-    text-align: center;
-
-    position: absolute;
-    top: 20vh;
-    left: 4vh;
-    margin: auto;
-}
-
-body main section:nth-child(2)>div:nth-child(1)>div:nth-child(1)>img{
-    width: 20%;
-
-    position: absolute;
-    top: 5vh;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-
-body main section:nth-child(2)>div:nth-child(1)>div:nth-child(2){
-    height: 35vh;
-    width: 12vw;
-
-    position: absolute;
-    top: 18vh;
-    left: 18vw;
-    margin: auto;
-    background:linear-gradient(to top, #d6f0f5, rgba(0, 153, 201, 0.3));
-}
-
-body main section:nth-child(2)>div:nth-child(1)>div:nth-child(2)>h1{
-    width: 15vh;
-    font-family: 'Catamaran';
-    font-size: 1vw;
-    font-weight: 600;
-    color: #0A0A0A;
-
-    position: absolute;
-    top: 15vh;
-    left: 5vh;
-    margin: auto;
-}
-
-body main section:nth-child(2)>div:nth-child(1)>div:nth-child(2)>h2{
-    width: 8vw;
-    font-family: Inter, SansSerif;
-    font-size: 0.9vw;
-    font-weight: 300;
-    color: #0A0A0A;
-    text-align: center;
-
-    position: absolute;
-    top: 20vh;
-    left: 4vh;
-    margin: auto;
-}
-
-body main section:nth-child(2)>div:nth-child(1)>div:nth-child(2)>img{
-    width: 30%;
-
-    position: absolute;
-    top: 25px;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-
-body main section:nth-child(2)>div:nth-child(1)>div:nth-child(3){
-    height: 35vh;
-    width: 12vw;
-
-    position: absolute;
-    top: -23vh;
-    left: 35vw;
-    margin: auto;
-    background:linear-gradient(to top, #d6f0f5, rgba(0, 153, 201, 0.3));
-}
-
-body main section:nth-child(2)>div:nth-child(1)>div:nth-child(3)>h1{
-    width: 20vw;
-    font-family: 'Catamaran';
-    font-size: 1vw;
-    font-weight: 600;
-    color: #0A0A0A;
-
-    position: absolute;
-    top: 15vh;
-    left: 1vh;
-    margin: auto;
-}
-
-body main section:nth-child(2)>div:nth-child(1)>div:nth-child(3)>h2{
-    width: 8vw;
-    font-family: Inter, SansSerif;
-    font-size: 0.9vw;
-    font-weight: 300;
-    color: #0A0A0A;
-    text-align: center;
-
-    position: absolute;
-    top: 20vh;
-    left: 4vh;
-    margin: auto;
-}
-
-body main section:nth-child(2)>div:nth-child(1)>div:nth-child(3)>img{
-    width: 30%;
-
-    position: absolute;
-    top: 25px;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-
-body main section:nth-child(2)>div:nth-child(1)>div:nth-child(4){
-    height: 35vh;
-    width: 12vw;
-
-    position: absolute;
-    top: 25vh;
-    left: 39vw;
-    margin: auto;
-    background:linear-gradient(to top, #d6f0f5, rgba(0, 153, 201, 0.3));
-}
-
-body main section:nth-child(2)>div:nth-child(1)>div:nth-child(4)>h1{
+section:nth-child(2)>div:nth-child(1)>div:nth-child(1)>h1{
     width: 20vh;
     font-family: 'Catamaran';
-    font-size: 1vw;
+    font-size: 1.2vw;
     font-weight: 600;
     color: #0A0A0A;
-
     position: absolute;
-    top: 15vh;
-    left: 5vh;
+    top: 17vh;
+    left: 3vh;
     margin: auto;
 }
 
-body main section:nth-child(2)>div:nth-child(1)>div:nth-child(4)>h2{
+section:nth-child(2)>div:nth-child(1)>div:nth-child(1)>h2{
     width: 8vw;
     font-family: Inter, SansSerif;
     font-size: 0.9vw;
     font-weight: 300;
     color: #0A0A0A;
     text-align: center;
-
     position: absolute;
-    top: 20vh;
+    top: 21vh;
     left: 4vh;
     margin: auto;
 }
 
-body main section:nth-child(2)>div:nth-child(1)>div:nth-child(4)>img{
+section:nth-child(2)>div:nth-child(1)>div:nth-child(1)>img{
     width: 30%;
-
     position: absolute;
-    top: 25px;
+    top: 6vh;
     left: 0;
     right: 0;
     margin: auto;
 }
 
+section:nth-child(2)>div:nth-child(1)>div:nth-child(2){
+    width: 27vh;
+    height: 36vh;
+    background-color: white;
+    box-shadow: #D0D0D0 0px 4px 12px;
+    border-radius: 1vh;
+    position: absolute;
+    margin: auto;
+}
 
+section:nth-child(2)>div:nth-child(1)>div:nth-child(2):hover{
+    box-shadow: #959393 0px 4px 12px;
+}
 
+section:nth-child(2)>div:nth-child(1)>div:nth-child(2){
+    height: 35vh;
+    width: 25vh;
+    position: absolute;
+    top: -18vh;
+    left: 33vw;
+    margin: auto;
+}
 
+section:nth-child(2)>div:nth-child(1)>div:nth-child(2)>h1{
+    width: 20vh;
+    font-family: 'Catamaran';
+    font-size: 1.2vw;
+    font-weight: 600;
+    color: #0A0A0A;
+    position: absolute;
+    top: 17vh;
+    left: 3vh;
+    margin: auto;
+}
 
+section:nth-child(2)>div:nth-child(1)>div:nth-child(2)>h2{
+    width: 8vw;
+    font-family: Inter, SansSerif;
+    font-size: 0.9vw;
+    font-weight: 300;
+    color: #0A0A0A;
+    text-align: center;
+    position: absolute;
+    top: 21vh;
+    left: 4vh;
+    margin: auto;
+}
 
+section:nth-child(2)>div:nth-child(1)>div:nth-child(2)>img{
+    width: 30%;
+    position: absolute;
+    top: 6vh;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
 
+section:nth-child(2)>div:nth-child(1)>div:nth-child(2){
+    width: 27vh;
+    height: 36vh;
+    background-color: white;
+    box-shadow: #D0D0D0 0px 4px 12px;
+    border-radius: 1vh;
+    position: absolute;
+    margin: auto;
+}
 
+section:nth-child(2)>div:nth-child(1)>div:nth-child(2):hover{
+    box-shadow: #959393 0px 4px 12px;
+}
 
+section:nth-child(2)>div:nth-child(1)>div:nth-child(2){
+    height: 35vh;
+    width: 25vh;
+    position: absolute;
+    top: -18vh;
+    left: 33vw;
+    margin: auto;
+}
+
+section:nth-child(2)>div:nth-child(1)>div:nth-child(2)>h1{
+    width: 20vh;
+    font-family: 'Catamaran';
+    font-size: 1.2vw;
+    font-weight: 600;
+    color: #0A0A0A;
+    position: absolute;
+    top: 17vh;
+    left: 3vh;
+    margin: auto;
+}
+
+section:nth-child(2)>div:nth-child(1)>div:nth-child(2)>h2{
+    width: 8vw;
+    font-family: Inter, SansSerif;
+    font-size: 0.9vw;
+    font-weight: 300;
+    color: #0A0A0A;
+    text-align: center;
+    position: absolute;
+    top: 21vh;
+    left: 4vh;
+    margin: auto;
+}
+
+section:nth-child(2)>div:nth-child(1)>div:nth-child(2)>img{
+    width: 30%;
+    position: absolute;
+    top: 6vh;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
 
 
