--- a/css/styles.css
+++ b/css/styles.css
@@ -464,9 +464,12 @@ section:nth-child(2)>div:nth-child(1)>div:nth-child(4)>img{
 section:nth-child(2)>div:nth-child(2)>h5 {
     width: 0vw;
     font-family: Inter,"Arial Black";
-    font-size: 4vw;
+    font-size: 3vw;
     font-weight: 600;
-    color: #05BFDA;
+    position: absolute;
+    right: 27.8vw;
+    top: 10vh;
+    color: #D9D9D9;
     margin: auto;
 }
 
@@ -477,9 +480,20 @@ section:nth-child(2)>div:nth-child(2)>h1 {
     font-weight: 700;
     color: #0A0A0A;
     position: absolute;
-    left: 15vw;
-    top: 7vh;
+    right: 15vh;
+    top: 15vh;
     margin: auto;
 }
 
+section:nth-child(2)>div:nth-child(2)>h2 {
+    width: 20vw;
+    font-family: Inter, SansSerif;
+    font-size: 1vw;
+    font-weight: 600;
+    color: #808080;
+    position: absolute;
+    top: 30vh;
+    right: 17vh;
+    margin: auto;
+}
 
