--- a/css/styles.css
+++ b/css/styles.css
@@ -515,3 +515,5 @@ section:nth-child(2)>div:nth-child(3)>div:nth-child(2){
     margin: auto;
 }
 
+/*--------------------------------------About me section-------------------------------------------------*/
+
