--- a/css/styles.css
+++ b/css/styles.css
@@ -519,7 +519,7 @@ section:nth-child(2)>div:nth-child(3)>div:nth-child(2){
 section:nth-child(3){
     position: relative;
     height: 100vh;
-    width: 72vw;
+    width: 65vw;
     padding-left: 14vw;
     padding-right: 14vw;
 }
@@ -532,4 +532,36 @@ section:nth-child(3){
     left: 14vw;
     margin: auto;
 }
+
+section:nth-child(3)>ul{
+    height: 55vh;
+    width: 35vw;
+
+    position: absolute;
+    top: 75vh;
+    right: 14vw;
+    margin: auto;
+}
+
+section:nth-child(3)>div{
+    height: 55vh;
+    width: 35vw;
+
+    position: absolute;
+    top: 25vh;
+    right: 14vw;
+    margin: auto;
+}
+
+section:nth-child(3)>div>h5{
+    width: 14vw;
+    font-family: Inter, SansSerif;
+    font-size: 3vw;
+    font-weight: 600;
+    color: #05BFDB;
+    margin: auto;
+    position: absolute;
+    top: -30vh;
+}
+
 
