--- a/css/styles.css
+++ b/css/styles.css
@@ -464,11 +464,11 @@ section:nth-child(2)>div:nth-child(1)>div:nth-child(4)>img{
 section:nth-child(2)>div:nth-child(2)>h5 {
     width: 0vw;
     font-family: Inter,"Arial Black";
-    font-size: 3vw;
+    font-size: 2vw;
     font-weight: 600;
     position: absolute;
     right: 27.8vw;
-    top: 10vh;
+    top: 11vh;
     color: #D9D9D9;
     margin: auto;
 }
@@ -487,7 +487,7 @@ section:nth-child(2)>div:nth-child(2)>h1 {
 
 section:nth-child(2)>div:nth-child(2)>h2 {
     width: 20vw;
-    font-family: Inter, SansSerif;
+    font-family: Inter, "Arial Black";
     font-size: 1vw;
     font-weight: 600;
     color: #808080;
@@ -555,10 +555,10 @@ section:nth-child(3)>div{
 
 section:nth-child(3)>div>h5{
     width: 14vw;
-    font-family: Inter, SansSerif;
+    font-family: Inter, "Arial Black";
     font-size: 2vw;
     font-weight: 600;
-    color: #05BFDB;
+    color: #D9D9D9;
     margin: auto;
     position: absolute;
     top: -30vh;
