--- a/css/styles.css
+++ b/css/styles.css
@@ -533,19 +533,9 @@ section:nth-child(3){
     margin: auto;
 }
 
-section:nth-child(3)>ul{
-    height: 55vh;
-    width: 35vw;
-
-    position: absolute;
-    top: 75vh;
-    right: 14vw;
-    margin: auto;
-}
-
 section:nth-child(3)>div{
     height: 55vh;
-    width: 35vw;
+    width: 30vw;
 
     position: absolute;
     top: 25vh;
@@ -561,7 +551,7 @@ section:nth-child(3)>div>h5{
     color: #D9D9D9;
     margin: auto;
     position: absolute;
-    top: -30vh;
+    top: -20vh;
 }
 
 section:nth-child(3)>div>h1{
@@ -571,8 +561,31 @@ section:nth-child(3)>div>h1{
     font-weight: 700;
     color: #0A0A0A;
     position: absolute;
-    top: -26vh;
+    top: -15vh;
     margin: auto;
 }
+
+section:nth-child(3)>div>h3{
+    width: 37vw;
+    font-family:Inter, SansSerif;
+    font-size: 1.5vw;
+    font-weight: 300;
+    color: #808080;
+
+    position: absolute;
+    top: 1vh;
+    margin: auto;
+}
+
+section:nth-child(3)>ul{
+    height: 52vh;
+    width: 29vw;
+    position: absolute;
+    top: 56vh;
+    right: 14vw;
+    margin: auto;
+}
+
+
 
 
