--- a/css/styles.css
+++ b/css/styles.css
@@ -588,17 +588,28 @@ section:nth-child(3)>ul{
 
 /*--------------------------------------education section section-------------------------------------------------*/
 
-section:nth-child(4)>img{
-    position: absolute;
-    top: 1px;
+section:nth-child(4){
+    position: relative;
+    height: 500vh;
+    width: 65vw;
+    padding-left: 0vw;
+    padding-right: 14vw;
 }
 
-section:nth-child(4)>div{
+section:nth-child(4)>img{
     position: relative;
-    height: 100vh;
-    width: 65vw;
-    padding-left: 14vw;
-    padding-right: 14vw;
+    top: -302px;
+    z-index: 1;
+}
+
+body main section:nth-child(4)>div:nth-child(1)>div:nth-child(1)>h1{
+    color: #000000;
+    font-family: 'Catamaran';
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    top: 20vh;
 }
 
 
