--- a/css/styles.css
+++ b/css/styles.css
@@ -596,21 +596,22 @@ section:nth-child(4){
     padding-right: 14vw;
 }
 
-section:nth-child(4)>img{
+section:nth-child(4)>div:nth-child(1)>img{
     position: relative;
     top: -302px;
     z-index: 1;
 }
 
-body main section:nth-child(4)>div:nth-child(1)>div:nth-child(1)>h1{
-    color: #000000;
-    font-family: 'Catamaran';
-    font-size: 50px;
-    font-style: normal;
-    font-weight: 900;
-    line-height: normal;
-    top: 20vh;
+section:nth-child(4)>div:nth-child(2)>div:nth-child(1){
+    position: relative;
+    padding-left: 14vw;
+    padding-right: 14vw;
+    bottom: 301vh;
+    left: 60vh;
+    z-index: 1;
 }
+
+
 
 
 
