--- a/css/styles.css
+++ b/css/styles.css
@@ -611,7 +611,13 @@ section:nth-child(4)>div:nth-child(2)>div:nth-child(1){
     z-index: 1;
 }
 
-
+section:nth-child(4)>div:nth-child(2)>div:nth-child(2){
+    position: relative;
+    padding-left: 14vw;
+    padding-right: 14vw;
+    bottom: 301vh;
+    z-index: 1;
+}
 
 
 
