--- a/css/styles.css
+++ b/css/styles.css
@@ -590,7 +590,7 @@ section:nth-child(3)>ul{
 
 section:nth-child(4){
     position: relative;
-    height: 500vh;
+    height: 250vh;
     width: 65vw;
     padding-left: 0vw;
     padding-right: 14vw;
@@ -617,6 +617,10 @@ section:nth-child(4)>div:nth-child(2)>div:nth-child(2){
     padding-right: 14vw;
     bottom: 301vh;
     z-index: 1;
+}
+
+section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>h5{
+    position: relative;
 }
 
 
