--- a/css/styles.css
+++ b/css/styles.css
@@ -621,6 +621,10 @@ section:nth-child(4)>div:nth-child(2)>div:nth-child(2){
 
 section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>h5{
     position: relative;
+    font-family: system-ui;
+    font-size: 3vh;
+    left: 15vh;
+    top: 4vh;
 }
 
 section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>h1{
