--- a/css/styles.css
+++ b/css/styles.css
@@ -657,7 +657,6 @@ section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>div>img:nth-child(1){
 section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>div>img:nth-child(2){
     position: relative;
     top: -2.65vh;
-    /* left: -2vh; */
     right: 1vh;
     width: 8vh;
 }
@@ -723,6 +722,16 @@ section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>div>img{
     left: 136vh;
     bottom: 44.7vh;
 }
+
+section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>h5{
+    position: relative;
+    font-family: system-ui;
+    font-size: 3vh;
+    left: 117vh;
+    bottom: 67.9vh;
+}
+
+
 
 
 
