--- a/css/styles.css
+++ b/css/styles.css
@@ -728,10 +728,17 @@ section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>h5{
     font-family: system-ui;
     font-size: 3vh;
     left: 117vh;
-    bottom: 67.9vh;
+    bottom: 71.9vh;
 }
 
-
+section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>img{
+    position: relative;
+    left: 105vh;
+    bottom: 7vh;
+    height: 12vh;
+    width: 12vh;
+    bottom: 58vh;
+}
 
 
 
