--- a/css/styles.css
+++ b/css/styles.css
@@ -776,6 +776,13 @@ section:nth-child(4)>div:nth-child(2)>div:nth-child(4)>hr{
     background-color: #00B4D8;
 }
 
+section:nth-child(4)>div:nth-child(2)>div:nth-child(4)>div>img{
+    position: relative;
+    width: 8vh;
+    left: 4.5vh;
+    bottom: 85vh;
+}
+
 
 
 
