--- a/css/styles.css
+++ b/css/styles.css
@@ -837,6 +837,15 @@ section:nth-child(4)>div:nth-child(2)>div:nth-child(5)>hr{
     background-color: #00B4D8;
 }
 
+section:nth-child(4)>div:nth-child(2)>div:nth-child(5)>div>img{
+    position: relative;
+    width: 8vh;
+    left: 135.5vh;
+    bottom: 127.3vh;
+}
+
+
+
 
 
 
