--- a/css/styles.css
+++ b/css/styles.css
@@ -850,7 +850,16 @@ section:nth-child(4)>div:nth-child(2)>div:nth-child(5)>h5{
     font-family: system-ui;
     font-size: 3vh;
     left: 117vh;
-    bottom: 150.9vh;
+    bottom: 154.9vh;
+}
+
+section:nth-child(4)>div:nth-child(2)>div:nth-child(5)>img{
+    position: relative;
+    left: 102vh;
+    bottom: 7vh;
+    height: 12vh;
+    width: 12vh;
+    bottom: 140.5vh;
 }
 
 
