--- a/css/styles.css
+++ b/css/styles.css
@@ -871,6 +871,15 @@ section:nth-child(4)>div:nth-child(2)>div:nth-child(5)>h1{
     left: 12vh;
 }
 
+section:nth-child(4)>div:nth-child(2)>div:nth-child(5)>h2{
+    width: 50vh;
+    font-size: 2vh;
+    font-family: system-ui,cursive;
+    position: relative;
+    bottom: 166vh;
+    left: 14vh;
+}
+
 
 
 
