--- a/css/styles.css
+++ b/css/styles.css
@@ -590,7 +590,7 @@ section:nth-child(3)>ul{
 
 section:nth-child(4){
     position: relative;
-    height: 250vh;
+    height: 150vh;
     width: 65vw;
     padding-left: 0vw;
     padding-right: 14vw;
@@ -598,8 +598,16 @@ section:nth-child(4){
 
 section:nth-child(4)>div:nth-child(1)>img{
     position: relative;
-    top: -302px;
+    top: -200px;
+    width: 1349.4px;
+    height: 1200px;
     z-index: 1;
+}
+
+section:nth-child(4)>div:nth-child(2)>div{
+    position: relative;
+    top: -186vh;
+    left: 7vh;
 }
 
 section:nth-child(4)>div:nth-child(2)>div:nth-child(1)>h1{
@@ -609,9 +617,8 @@ section:nth-child(4)>div:nth-child(2)>div:nth-child(1)>h1{
     font-weight: 600;
     font-size: 2vw;
     color: #D9D9D9;
-    bottom: 300vh;
-    /* right: -64vh; */
-    left: 60vh;
+    bottom: 3vh;
+    left: 57vh;
     margin: auto;
     z-index: 1;
 }
@@ -623,8 +630,8 @@ section:nth-child(4)>div:nth-child(2)>div:nth-child(1)>h2{
     font-weight: 600;
     font-size: 3vw;
     color: #000000;
-    bottom: 303vh;
-    left: 53vh;
+    bottom: 6vh;
+    left: 50vh;
     margin: auto;
     z-index: 1;
 }
