--- a/css/styles.css
+++ b/css/styles.css
@@ -710,8 +710,8 @@ section:nth-child(4)>div:nth-child(2)>div:nth-child(3){
     position: absolute;
     padding-left: 14vw;
     padding-right: 14vw;
-    bottom: 301vh;
-    /*z-index: 1;*/
+    top: 75.7vh;
+    z-index: 1;
 }
 section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>hr{
     position: relative;
